Refactor: Convert client to asyncio
Refactors the entire qtask-client library to use asyncio instead of threading and synchronous operations.

- Replaces the 'requests' library with 'httpx' for asynchronous HTTP calls to the broker API in `api_client.py`.
- Replaces the synchronous 'redis' library with 'redis.asyncio' for asynchronous Redis operations in `consumer_worker.py`.
- Replaces `threading` (Thread, Timer, Lock, Event) with their `asyncio` equivalents (create_task, sleep, Lock, Event) in `consumer_worker.py`.
- Converts relevant methods in `api_client.py`, `consumer_worker.py`, and `client.py` to `async def` and uses `await`.
- Adapts exception handling for the new asynchronous libraries.
- The `QTaskClient.handler` decorator now accepts `async def` functions in addition to synchronous ones (the worker handles both cases).
- Updates `pyproject.toml` to reflect the new dependencies (`httpx`, `redis>=4.2`).

This change improves compatibility with asynchronous frameworks like FastAPI/Uvicorn, prevents event loop blocking, and potentially enhances performance and scalability.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,33 @@
 [project]
 name = "qtask-client-py"
-version = "0.1.0"
+version = "0.2.0" # Consider incrementing version after major refactor
 dependencies = [
-    "requests",
-    "redis"
+    "httpx",                     # Replaced requests with httpx for async HTTP
+    "redis>=4.2",                # Ensure redis version supports asyncio
+    # Add other dependencies your library might have below
+    # e.g., "pydantic" if used for models, etc.
 ]
+# Optional: Specify Python version
+# python = ">=3.8"
 
 [build-system]
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
+
+# Optional: Add project metadata (URLs, author, etc.)
+# [project.urls]
+# Homepage = "https://github.com/yourusername/qtask-client-py"
+# Bug-Tracker = "https://github.com/yourusername/qtask-client-py/issues"
+
+# [project.optional-dependencies]
+# hiredis = ["redis[hiredis]>=4.2"] # Example: Optional faster parser
+```
+
+**Key Changes:**
+
+1.  **`dependencies`**:
+    * `requests` has been replaced with `httpx`.
+    * `redis` is kept, but specified as `redis>=4.2` to ensure compatibility with `asyncio`. You might consider `redis[hiredis]>=4.2` for potentially better performance, possibly as an optional dependency.
+2.  **`version`**: I've incremented the version to `0.2.0` as changing the core I/O model is a significant update. Adjust as needed based on your versioning scheme.
+
+You can replace the contents of your `pyproject.toml` with this updated version. Remember to reinstall the dependencies in your virtual environment after updating the file (e.g., `pip install -e .` if you're installing in editable mode, or `pip install .
