refactor: The logs are refactored to report depending on the events executed, for example when a partition is obtained.

--- a/.env.development
+++ b/.env.development
@@ -2,5 +2,8 @@ REDIS_HOST=40.76.248.127
 REDIS_USERNAME=default
 REDIS_PASSWORD=3n7F8fqEFfzC2vfCaeztlXNKxtcIJjxX2Mht+GadPmyGdXbrI36CHw==
 REDIS_PORT=30000
+QTASK_BROKER_URL=127.0.0.1
+QTASK_BROKER_PORT=3000
+
 NUM_PARTITIONS=2
 PORT=3000
