--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@ REDIS_HOST=localhost
 REDIS_USERNAME=default
 REDIS_PASSWORD=
 REDIS_PORT=6379
+QTASK_BROKER_URL=127.0.0.1
+QTASK_BROKER_PORT=3000
 NUM_PARTITIONS=1
 PORT=3000
